--- a/index.html
+++ b/index.html
@@ -57,7 +57,11 @@
   </div>
 
   <script type='text/javascript' src='js/app.js'></script>
-  <script src="register.js"></script>
+  <script>
+    if ('serviceWorker' in navigator) {
+      navigator.serviceWorker.register('./serviceWorker.js')
+    }
+  </script>
 
 </body>
 
